refactor: Lx-View 아키텍처 및 인증 아키텍처 전면 개편 - [Backend] AppIdResolver 도입 및 중복 로직 제거 - [Backend] GlobalExceptionHandler 추가 및 메모리 누수 방지 스케줄러 적용 - [Backend] SqlMonitoring 엔드포인트 추가 및 WebSocket JWT 허가 로직 도입 - [Frontend] localStorage 내 refreshToken 제거 및 HttpOnly 쿠키 전환 대응 - [Frontend] 401 Refresh 무한 루프 이슈 해결 및 소켓 재연결 로직 안정화